src/objects/c2g__codaTransaction__c.object
<CustomObject>
    <customHelpPage>c2g__codahelptransaction</customHelpPage>
    <description>Holds header information about a transaction.</description>
    <fields>
        <fullName>ExternalDocumentNumber__c</fullName>
        <description>The sequence number of the transaction.</description>
        <formula>c2g__BillingDocument__r.fferpcore__ExternalDocumentNumber__c</formula>
        <inlineHelpText>The sequence number of the transaction. If you are using this field, you can add it to the CashMatchingOtherTransactions field set on Transaction Line Item to aid in identifying documents.</inlineHelpText>
        <label>External Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inter_CO_source_or_destination__c</fullName>
        <formula>if (isblank(Inter_Company_Transfer__r.c2g__SourceJournal__r.Name), &quot;&quot;,if ( Inter_Company_Transfer__r.c2g__SourceJournal__r.Name = c2g__DocumentNumber__c , &quot;Source Journal&quot;, &quot;Destination Journal&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inter CO source or destination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inter_Company_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Transactions (Intercompany Transfer)</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AccountOutstandingTotal__c</fullName>
        <label>Account Outstanding Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__AccountOutstandingValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__AccountTotal__c</fullName>
        <label>Account Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__AccountValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation</label>
        <referenceTo>c2g__Allocation__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BillingDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the billing document to which this transaction relates</description>
        <inlineHelpText>Lookup to the billing document to which this transaction relates</inlineHelpText>
        <label>Billing Document</label>
        <referenceTo>fferpcore__BillingDocument__c</referenceTo>
        <relationshipLabel>Accounting Transaction</relationshipLabel>
        <relationshipName>AccountingTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Credits__c</fullName>
        <label>Home Credits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyRevaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation</label>
        <referenceTo>c2g__codaCurrencyRevaluation__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Debits__c</fullName>
        <label>Home Debits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentDescription__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingTotal__c</fullName>
        <label>Document Outstanding Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DocumentOutstandingValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference2__c</fullName>
        <label>Document Reference 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference__c</fullName>
        <label>Document Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTotal__c</fullName>
        <label>Document Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DocumentValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DualCredits__c</fullName>
        <label>Dual Credits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DualValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__DualValue__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DualDebits__c</fullName>
        <label>Dual Debits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DualValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__DualValue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DualValueTotal__c</fullName>
        <label>Dual Value Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DualValue__c</summarizedField>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__HomeValueTotal__c</fullName>
        <label>Home Value Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</summarizedField>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Transactions (Invoice Group)</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <label>MatchType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OriginalTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Transactions (Reverse Transaction)</relationshipLabel>
        <relationshipName>OriginalTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayableCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Credit Note</label>
        <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReverseReason__c</fullName>
        <label>Reverse Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ReverseTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Transactions (Original Transaction)</relationshipLabel>
        <relationshipName>ReverseTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionType__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Purchase Invoice</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Purchase Credit Note</fullName>
                </value>
                <value>
                    <fullName>Cash Matching Journal</fullName>
                </value>
                <value>
                    <fullName>Currency Revaluation</fullName>
                </value>
                <value>
                    <fullName>Year End Journal</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VendorDocumentNumber__c</fullName>
        <label>Vendor Document Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TRN{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>